fix Java 8 test compat and session error msg